Base/legislation : 국회(입법) 관련 시스템 base - 소관위원회 더 알아보기, 입법기관 조회 페이지 미완성 (#27)
* Legislation/feature/issue/15 : 최근 접수된 법안 페이지 - 최근 법안 게시글 전체조회, 상세 조회 등 (#18)

* add : value 에 대한 getter 추가

* feature : 법안 발의자 table mapping

* add : 법안명, 입법기관 필드 추가

* feature : 법안 게시글에 대한 필터링 태그 관리 객체

* feature : 쿼리 정렬 관리 객체

* feature : 최근 법안 게시글 repository

* feature : 최근 법안 게시글 domain entity

* feature : 최근 법안 게시글 조회 컴포넌트 및 repository

* feature : 최근 법안 게시글 paging 조회 결과

* feature : 법안 게시글 조회 쿼리 커맨드 객체

* feature : 최근 법안 게시글 조회 service 컴포넌트

* build : storage:db-core 모듈 runtime-only 의존성 추가 + core-domain 모듈 impl 의존성 추가

* config : notification.yml + db-core.yml 추가

* feature : 최근 법안 게시글 thumbnail 조회 controller

* feature : 최근 법안 게시글 response

* feature : 최근 법안 게시글 thumbnail 조회 api spec 조합기 객체

* add : profile image 필드 추가

* add : 최근 발의법안 게시글의 bill id 반환 추가

* feature : core-domain 모듈 exception

* feature : 최근 법안 게시글 상세 조회 query 커멘드

* feature : 최근 법안 게시글 도메인 exception

* feature : 법안발의자 객체 - RecentBillPost 하위 도메인 객체

* feature : 법안발의자 객체 추가

* add : 최근 법안 게시글 상세 조회 기능 추가

* feature : api response 관련 constant 객체

* feature : 최근 법안 게시글 response 및 response 생성기

* add : 최근 법안 게시글 상세 조회 추가

* add : 법안발의자 jpa entity 필드 추가

* add : PartyName enum 필드 추가

* feature : 법안발의자 jpa repository

* add : 최근 법안 게시글 상세 조회 repository adapter 추가

* add : 최근 법안 게시글 상세 조회 response 필드 추가

* feature : core-domain 위상의 예외 전파 controller advice

* Legislation/test/issue/19 : 최근 접수된 법안 페이지 test (#20)

* chore : summary title 변경

* test : recentbill api 모듈 용 fixture

* test : 최근법안게시글 페이지 composer 테스트

* test : core-domain 모듈 context test, develop test 추상클래스

* test : recentbill domain 모듈 용 fixture

* test : 최근법안게시글 조회 구현레이어 테스트

* Legislation/test/issue/19 : core-api 모듈 테스트 코드 추가 (#23)

* chore : summary title 변경

* test : recentbill api 모듈 용 fixture

* test : 최근법안게시글 페이지 composer 테스트

* test : core-domain 모듈 context test, dev